Update bib pdf reference

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,6 @@
   year={2021},
   copyright={Creative Commons Attribution 4.0 International},
   selected={true},
-  pdf={MachineLearningOPF.pdf},
+  pdf={ml_opf.pdf},
   img={opf_strategies.jpg},
 }
