Add early access paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,14 +2,14 @@
 ---
 
 @article{https://doi.org/10.48550/arxiv.2110.00306,
-  abbr={Preprint},
-  doi={10.48550/ARXIV.2110.00306},
-  url={https://arxiv.org/abs/2110.00306},
+  abbr={IEEE TPWRS},
+  doi={10.1109/TPWRS.2022.3187218},
+  url={https://ieeexplore.ieee.org/document/9810496},
   author={Falconer, Thomas and Mones, Letif},
   title={Leveraging power grid topology in machine learning assisted optimal power flow},
   publisher={arXiv},
-  journal={arXiv.org e-Print,},
-  year={2021},
+  journal={IEEE Transactions on Power Systems (Early Access),},
+  year={2022},
   copyright={Creative Commons Attribution 4.0 International},
   selected={true},
   pdf={ml_opf.pdf},
