Add latest publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,17 +1,47 @@
 ---
 ---
 
-@article{https://doi.org/10.48550/arxiv.2110.00306,
+@article{bayesian_regression_markets,
+  abbr={JMLR},
+  doi={https://doi.org/10.48550/arXiv.2310.14992},
+  url={https://arxiv.org/abs/2310.14992},
+  author={Falconer, Thomas and Kazempour, Jalal and Pinson, Pierre},
+  title={Bayesian Regression Markets},
+  publisher={arXiv},
+  journal={Journal of Machine Learning Research (Accepted, Minor Revisions),},
+  year={2024},
+  copyright={Creative Commons Attribution 4.0 International},
+  selected={true},
+  pdf={regression_markets.pdf},
+  img={regression_market.png},
+}
+
+@article{replication_robust,
+  abbr={arXiv},
+  doi={https://doi.org/10.48550/arXiv.2310.06000},
+  url={https://arxiv.org/abs/2310.06000},
+  author={Falconer, Thomas and Kazempour, Jalal and Pinson, Pierre},
+  title={Towards Replication-Robust Analytics Markets},
+  publisher={arXiv},
+  journal={arXiv Preprint,},
+  year={2024},
+  copyright={Creative Commons Attribution 4.0 International},
+  selected={true},
+  pdf={replication_robust.pdf},
+  img={replication_robust.png},
+}
+
+@article{ml_opf,
   abbr={IEEE TPWRS},
   doi={10.1109/TPWRS.2022.3187218},
   url={https://ieeexplore.ieee.org/document/9810496},
   author={Falconer, Thomas and Mones, Letif},
   title={Leveraging power grid topology in machine learning assisted optimal power flow},
-  publisher={arXiv},
-  journal={IEEE Transactions on Power Systems (Early Access),},
+  publisher={IEEE},
+  journal={IEEE Transactions on Power Systems,},
   year={2022},
   copyright={Creative Commons Attribution 4.0 International},
   selected={true},
-  pdf={ml_opf.pdf},
+  pdf={ml_opf_published.pdf},
   img={opf_strategies.jpg},
 }
