Add coauthour links

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,12 +8,12 @@
   author={Falconer, Thomas and Kazempour, Jalal and Pinson, Pierre},
   title={Bayesian Regression Markets},
   publisher={arXiv},
-  journal={Journal of Machine Learning Research (Accepted, Minor Revisions),},
+  journal={Journal of Machine Learning Research (Accepted),},
   year={2024},
   copyright={Creative Commons Attribution 4.0 International},
   selected={true},
   pdf={regression_markets.pdf},
-  img={regression_market.png},
+  %img={regression_market.png},
 }
 
 @article{replication_robust,
@@ -23,12 +23,12 @@
   author={Falconer, Thomas and Kazempour, Jalal and Pinson, Pierre},
   title={Towards Replication-Robust Analytics Markets},
   publisher={arXiv},
-  journal={arXiv Preprint,},
+  journal={arXiv Preprint (Under Review),},
   year={2024},
   copyright={Creative Commons Attribution 4.0 International},
-  selected={true},
+  selected={false},
   pdf={replication_robust.pdf},
-  img={replication_robust.png},
+  %img={replication_robust.png},
 }
 
 @article{ml_opf,
@@ -43,5 +43,5 @@
   copyright={Creative Commons Attribution 4.0 International},
   selected={true},
   pdf={ml_opf_published.pdf},
-  img={opf_strategies.jpg},
+  %img={opf_strategies.jpg},
 }
