--- a/_posts/2025-01-23-drawdown.md
+++ b/_posts/2025-01-23-drawdown.md
@@ -7,7 +7,7 @@ keywords: finance
 published: true
 ---
 
-The drawdown of a series is defined as the decline in value from a pervious peak. More formally, if {% katexmm %} $Y(t)$ {% endkatexmm %} is a stochastic process with {% katexmm %} $t \geq 0$ {% endkatexmm %} and observations {% katexmm %} $y_t$ {% endkatexmm %}, the drawdown at time {% katexmm %} $t$ {% endkatexmm %} is
+The [drawdown](https://en.wikipedia.org/wiki/Drawdown_(economics)) of a series is defined as the decline in value from a pervious peak. More formally, if {% katexmm %} $Y(t)$ {% endkatexmm %} is a stochastic process with {% katexmm %} $t \geq 0$ {% endkatexmm %} and observations {% katexmm %} $y_t$ {% endkatexmm %}, the drawdown at time {% katexmm %} $t$ {% endkatexmm %} is
 
 {% katexmm %}
 $$
